// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClaimRewardButton > it claims only selected and enabled rewards on submit button click on success 1`] = `
{
  "claims": [
    {
      "comptrollerContractAddress": "0x10b57706ad2345e590c2ea4dc02faef0d9f5b08b",
      "contract": "rewardsDistributor",
      "contractAddress": "0xa14c236372228b6e8182748f3ebbfb4bfeea3574",
      "vTokenAddressesWithPendingReward": [
        "0xcfc8a73f9c888eea9af9ccca24646e84a915510b",
        "0x12d3a3aa7f4917ea3b8ee34f99a9a7eec521fa61",
      ],
    },
    {
      "comptrollerContractAddress": "0x10b57706ad2345e590c2ea4dc02faef0d9f5b08b",
      "contract": "rewardsDistributor",
      "contractAddress": "0xadbed07126b7b70cbc5e07bf73599d55be571b9c",
      "vTokenAddressesWithPendingReward": [
        "0xcfc8a73f9c888eea9af9ccca24646e84a915510b",
      ],
    },
    {
      "contract": "prime",
      "vTokenAddressesWithPendingReward": [
        "0xcfc8a73f9c888eea9af9ccca24646e84a915510b",
        "0x12d3a3aa7f4917ea3b8ee34f99a9a7eec521fa61",
      ],
    },
  ],
}
`;

exports[`ClaimRewardButton > it claims reward on submit button click and closes modal on success 1`] = `
{
  "claims": [
    {
      "contract": "legacyPoolComptroller",
      "vTokenAddressesWithPendingReward": [
        "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
        "0xb7526572FFE56AB9D7489838Bf2E18e3323b441A",
        "0x08e0A5575De71037aE36AbfAfb516595fE68e5e4",
      ],
    },
    {
      "comptrollerContractAddress": "0x10b57706ad2345e590c2ea4dc02faef0d9f5b08b",
      "contract": "rewardsDistributor",
      "contractAddress": "0xa14c236372228b6e8182748f3ebbfb4bfeea3574",
      "vTokenAddressesWithPendingReward": [
        "0xcfc8a73f9c888eea9af9ccca24646e84a915510b",
        "0x12d3a3aa7f4917ea3b8ee34f99a9a7eec521fa61",
      ],
    },
    {
      "comptrollerContractAddress": "0x10b57706ad2345e590c2ea4dc02faef0d9f5b08b",
      "contract": "rewardsDistributor",
      "contractAddress": "0xadbed07126b7b70cbc5e07bf73599d55be571b9c",
      "vTokenAddressesWithPendingReward": [
        "0xcfc8a73f9c888eea9af9ccca24646e84a915510b",
      ],
    },
    {
      "contract": "vaiVault",
    },
    {
      "contract": "xvsVestingVault",
      "poolIndex": 0,
      "rewardToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
    },
    {
      "contract": "prime",
      "vTokenAddressesWithPendingReward": [
        "0xcfc8a73f9c888eea9af9ccca24646e84a915510b",
        "0x12d3a3aa7f4917ea3b8ee34f99a9a7eec521fa61",
      ],
    },
  ],
}
`;

exports[`ClaimRewardButton > renders correct reward breakdown in modal 1`] = `"VenusXVS$400K1B XVSMetaverseVAI$32B VAIXVS$1.123B XVSVAI vaultXVS$123B XVSXVS vesting vaultXVS$1.654B XVSPrimeVAI$32B VAIXVS$1.123B XVS"`;
